Cambios al header

--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 </head>
 <body>
     <header>
-        <div class="header_container">
-            <a href="#">Gmail</a>
-            <a href="#">Images</a>
-            <a href="#" class="icon-apps"></a>
-            <a href="#" class="profile_image">
-                <img src="images/bambi.png" alt="">
-            </a>
-        </div>
+        <nav>
+            <ul class="nav_right_section">
+                <li>
+                    <a href="#">Gmail</a>
+                </li>
+                <li>
+                    <a href="#">Images</a>
+                </li>
+                <li>
+                    <a href="#" class="icon-apps"></a>
+                </li>
+                <li>
+                    <a href="#" class="profile_image">
+                        <img src="https://lh3.googleusercontent.com/ogw/ADGmqu8gToxqkapGEbvV7iFNGeCMUeC39eqPg0yKQucC=s32-c-mo" alt="Profile">
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <div class="main_section">
         <div class="container">
