--- a/index.html
+++ b/index.html
@@ -29,22 +29,28 @@
             </ul>
         </nav>
     </header>
-    <div class="main_section">
+    <main class="main_section">
         <div class="container">
-            <div class="logo_container">
-                <img class="logo" src="images/logo.png" alt="">
-            </div>
-            <div class="searcher">
-                <span class="icon-search"></span>
-                <input type="text">
-                <span class="icon-keyboard_voice"></span>
-            </div>
-            <div class="buttons">
-                <input type="button" value="Google Search">
-                <input type="button" value="I'm Feeling Lucky">
-            </div>
+            <section class="logo_container">
+                <img class="logo" src="images/logo.png" alt="logo">
+            </section>
+            <section class="searcher">
+                <div class="searcher_container">
+                    <span class="icon-search"></span>
+                    <input type="text">
+                    <a class="icon-keyboard_voice"></a>
+                </div>
+            </section>
+            <section class="main_buttons">
+                <div>
+                    <button>Google Search</button>
+                </div>
+                <div>
+                    <button>I'm Feeling Lucky</button>
+                </div>
+            </section>
         </div>
-    </div>
+    </main>
     <footer>
         <div class="footer_1">
             <a href="#">Advertising</a>
