--- a/index.html
+++ b/index.html
@@ -52,17 +52,30 @@
         </div>
     </main>
     <footer>
-        <div class="footer_1">
-            <a href="#">Advertising</a>
-            <a href="#">Business</a>
-            <a href="#">About</a>
-            <a href="#"> How Search Works</a>
-        </div>
-        <div class="footer_2">
-            <a href="#">Privacy</a>
-            <a href="#">Terms</a>
-            <a href="#">Settings</a>
-        </div>
+        <ul class="footer_left">
+            <li>
+                <a href="#">Advertising</a>
+            </li>
+            <li>
+                <a href="#">Business</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#"> How Search Works</a>
+            </li>
+        </ul>
+        <ul class="footer_right">
+            <li>
+                <a href="#">Privacy</a>
+            </li>
+            <li>
+                <a href="#">Terms</a>
+            </li>
+            <li>
+                 <a href="#">Settings</a>
+            </li>
     </footer>
 </body>
 </html>
