Solucionado fotos y normalize

--- a/Wikipedia clone/index.html
+++ b/Wikipedia clone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wikipedia Clone</title>
-    <link rel="stylesheet" href="/C:/Users/usuario/Desktop/Platzi/normalize.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -99,89 +99,90 @@
             </div>
         </div>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
+            <img src="images/wiki.PNG" alt="">
             <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
         <a class="items_sec">
-            <img src="images/wiki.png" alt="">
-            <div class="text">
+            <img src="images/wiki.PNG" alt="">
+            <div class="item_text">
                 <span class="items_title">Commons</span>
                 <span class="items_description">Freely usable photos & more</span>
             </div>
         </a>
+        
 
     </section>
     <footer>
