--- a/Google clone/index.html
+++ b/Google clone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google clone</title>
-    <link rel="stylesheet" href="/C:/Users/usuario/Desktop/Platzi/normalize.css">
+    <link rel="stylesheet" href="../normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
