Solucionados PNG primera columna

--- a/Wikipedia clone/index.html
+++ b/Wikipedia clone/index.html
@@ -88,11 +88,11 @@
     </section>
     <section class="links">
         <div class="item1">
-            <img src="images/wiki.png" alt="">
+            <img src="images/wiki.PNG" alt="">
             <p>Wikipedia is hosted by the <a href="#">Wikimedia Foundation</a>, a non-profit organization that also hosts a range of other projects.</p>
         </div>
         <div class="item2">
-            <img src="images/wiki.png" alt="">
+            <img src="images/wiki.PNG" alt="">
             <div class="text">
                 <a href="#">Download Wikipedia for Android or iOS</a>
                 <p>Save your favorite articles to read offline, sync your reading lists across devices and customize your reading experience with the official Wikipedia app.</p>
